--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "eslint": "^8.2.0",
     "node": "^17.0.1",
     "typescript": "^4.4.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ts-build/index.js",
-    "combuild": "node ts-build/commands/commands.js"
+    "combuild": "node ts-build/commands/commands.js",
+    "lint": "eslint **/*.ts"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,11 @@
   "bugs": {
     "url": "https://github.com/b00000001/discordbot/issues"
   },
-  "homepage": "https://github.com/b00000001/discordbot#readme"
+  "homepage": "https://github.com/b00000001/discordbot#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "^8.2.0",
+    "eslint-config-google": "^0.14.0"
+  }
 }
