--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ts-build/index.js",
     "combuild": "node ts-build/commands/commands.js",
-    "lint": "eslint **/*.ts"
+    "lint": "eslint **/*.ts",
+    "watch": "nodemon ts-build/index.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^8.2.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "nodemon": "^2.0.16"
   }
 }
