--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "node": "^17.0.1",
+    "svg-png-converter": "^0.0.9",
     "typescript": "^4.4.4"
   },
   "scripts": {
